evaluation of renderlayer animation occurs after frame has been rendered #35384

Closed
opened 2013-05-16 02:07:30 +02:00 by Carlo Andreacchio · 3 comments

%%%--- Operating System, Graphics card ---
Windows 7 x64, gtx 580

- Blender version with error, and version that worked ---

fails on r56693

- Short description of error ---

Renderlayer Animation is evalude after the frame has been rendered

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Attached is a blend file, 4 frames long, with the current frame on frame 4
on frame 2 'layer2' layer has a keyframe on, on frame 3 the 'layer2' layer has a keyframe off.

it should be that frames 1 and 2 have the 'layer2' layer, and 3 & 4 dont

The rendered result is frame 1 does not have the 'layer2' layer, due to the current frame being frame 4 which has it turned off. which is incorrect
frame 2 is correct, and has the 'layer2' layer enabled
frame 3 is incorrect, it has the 'layer2' layer enabled
frame 4 is correct, has the 'layer2' layer disabled.

Steps to reproduce

  1. Open attached blend file
  2. hit render animation
  3. analyze each individual multilayer exr by itself.

%%%

%%%--- Operating System, Graphics card --- Windows 7 x64, gtx 580 - Blender version with error, and version that worked --- fails on r56693 - Short description of error --- Renderlayer Animation is evalude after the frame has been rendered - Steps for others to reproduce the error (preferably based on attached .blend file) --- Attached is a blend file, 4 frames long, with the current frame on frame 4 on frame 2 'layer2' layer has a keyframe on, on frame 3 the 'layer2' layer has a keyframe off. it should be that frames 1 and 2 have the 'layer2' layer, and 3 & 4 dont The rendered result is frame 1 does not have the 'layer2' layer, due to the current frame being frame 4 which has it turned off. which is incorrect frame 2 is correct, and has the 'layer2' layer enabled frame 3 is incorrect, it has the 'layer2' layer enabled frame 4 is correct, has the 'layer2' layer disabled. Steps to reproduce 1. Open attached blend file 2. hit render animation 3. analyze each individual multilayer exr by itself. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35384
No description provided.