Fix #35384: animation to enable/disable render layers was applied one frame too late when rendering animations.